--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ python = "^3.12"
 fastapi = "^0.70.0"
 uvicorn = "^0.15.0"
 transformers = "^4.22.2"
+torch = "^2.2.1"
+pydantic = "^1.10.14"
 
 [build-system]
 requires = ["poetry-core"]
